--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-changed": "^4.0.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^8.0.0",
     "gulp-postcss": "^9.0.1",
